# Tsoa with Express/src/services/type.ts
@@ -1,0 +1,21 @@
+
+import { Schema, model } from 'mongoose';
+
+export interface UserServicetype   {
+    name: string;
+    email: string;
+}
+
+const UserSchema = new Schema<UserServicetype>({
+    name: { type: String, required: true },
+    email: { type: String, required: true }
+});
+
+export const UserModel = model<UserServicetype>('User', UserSchema);
+
+export interface UserServicePrams {
+    name?: string;
+    email?: string;
+}
+
+
